fixed overflowing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@
   }
 }
 
+
+#headline {
+  font-size: 52px;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
+
 h1 {
   text-align: center;
   font-size: 52px;
@@ -18,6 +25,8 @@ h1 {
 
 h1, p {
   word-break: break-all;
+  margin-bottom: 0px; /* Adjust as needed */
+
 }
 
 p {
@@ -38,6 +47,7 @@ p a {
   font-size: 16px;
   color: #777574;
   font-family: "Helvetica Neue", Arial, sans-serif;
+  
 }
 
 
@@ -51,7 +61,7 @@ p a {
   border-radius: 20px;
   padding: 0 1em;
   max-width: 600px; 
-  /* border: 2px solid red; */
+  border: 2px solid red;
 }
 
 .item {
@@ -59,16 +69,17 @@ p a {
   margin-top: 10px;
   margin-bottom: 10px;
   padding:10px 10px 10px 10px;
-
+  border: 2px solid red;
 }
 
 .item-result {
   text-align: left;
   height: 20px;
-  margin-top: px;
-  margin-bottom: px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   padding:10px 10px 10px 10px;
   font-family: "Helvetica Neue", Arial, sans-serif;
+  border: 2px solid red;
 
 }
 
